--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,94 +1,60 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-12" ng-show="currentUser">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <span class="glyphicon glyphicon-comment"></span> Chat
+        <span class="glyphicon glyphicon-comment"></span> Chat <span ng-show="toUser">{{toUser}}</span>
         <div class="btn-group pull-right">
           <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
             <span class="glyphicon glyphicon-chevron-down"></span>
           </button>
           <ul class="dropdown-menu slidedown">
-            <li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-refresh">
-                            </span>Refresh</a></li>
-            <li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-ok-sign">
-                            </span>Available</a></li>
-            <li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-remove">
-                            </span>Busy</a></li>
-            <li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-time"></span>
-              Away</a></li>
+            <li ng-repeat="user1 in allUsers">
+              <a ng-click="setToUser(user1)"><span class="glyphicon glyphicon-user"></span>{{user1}}</a>
+            </li>
             <li class="divider"></li>
-            <li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-off"></span>
+            <li><a href="#" ng-click="signOut()"><span class="glyphicon glyphicon-off"></span>
               Sign Out</a></li>
           </ul>
         </div>
       </div>
       <div class="panel-body">
         <ul class="chat">
-          <li class="left clearfix"><span class="chat-img pull-left">
-                            <img src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar" class="img-circle" />
-                        </span>
+          <li class="left clearfix" ng-repeat="message in messages">
+            <span class="chat-img pull-{{$index % 2? 'right': 'left'}}">
+              <img ng-src="http://placehold.it/50/{{$index % 2? '55C1E7': 'FA6F57'}}/fff&text={{message.from}}" alt="User Avatar" class="img-circle" />
+            </span>
             <div class="chat-body clearfix">
               <div class="header">
-                <strong class="primary-font">Jack Sparrow</strong> <small class="pull-right text-muted">
-                <span class="glyphicon glyphicon-time"></span>12 mins ago</small>
+                <strong class="primary-font pull-{{$index % 2? 'right': 'left'}}">{{message.from}}</strong> <small class="pull-{{$index % 2? 'left': 'right'}} text-muted">
+                <span class="glyphicon glyphicon-time"></span>{{message.date}}</small>
               </div>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
-                dolor, quis ullamcorper ligula sodales.
-              </p>
-            </div>
-          </li>
-          <li class="right clearfix"><span class="chat-img pull-right">
-                            <img src="http://placehold.it/50/FA6F57/fff&text=ME" alt="User Avatar" class="img-circle" />
-                        </span>
-            <div class="chat-body clearfix">
-              <div class="header">
-                <small class=" text-muted"><span class="glyphicon glyphicon-time"></span>13 mins ago</small>
-                <strong class="pull-right primary-font">Bhaumik Patel</strong>
-              </div>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
-                dolor, quis ullamcorper ligula sodales.
-              </p>
-            </div>
-          </li>
-          <li class="left clearfix"><span class="chat-img pull-left">
-                            <img src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar" class="img-circle" />
-                        </span>
-            <div class="chat-body clearfix">
-              <div class="header">
-                <strong class="primary-font">Jack Sparrow</strong> <small class="pull-right text-muted">
-                <span class="glyphicon glyphicon-time"></span>14 mins ago</small>
-              </div>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
-                dolor, quis ullamcorper ligula sodales.
-              </p>
-            </div>
-          </li>
-          <li class="right clearfix"><span class="chat-img pull-right">
-                            <img src="http://placehold.it/50/FA6F57/fff&text=ME" alt="User Avatar" class="img-circle" />
-                        </span>
-            <div class="chat-body clearfix">
-              <div class="header">
-                <small class=" text-muted"><span class="glyphicon glyphicon-time"></span>15 mins ago</small>
-                <strong class="pull-right primary-font">Bhaumik Patel</strong>
-              </div>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
-                dolor, quis ullamcorper ligula sodales.
-              </p>
+              <p><br/>{{message.message}}</p>
             </div>
           </li>
         </ul>
       </div>
-      <div class="panel-footer">
+      <div class="panel-footer" ng-show="toUser">
         <div class="input-group">
-          <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here..." />
+          <input id="btn-input" ng-model="messageText" type="text" class="form-control input-sm" placeholder="Type your message here..." />
                         <span class="input-group-btn">
-                            <button class="btn btn-warning btn-sm" id="btn-chat">
+                            <button class="btn btn-warning btn-sm" id="btn-chat" ng-click="sendMessage()">
                               Send</button>
                         </span>
+        </div>
+      </div>
+    </div >
+  </div>
+  <div class="col-sm-6 col-md-4 col-md-offset-4" ng-show="!currentUser">
+    <div class="account-wall">
+      <div id="my-tab-content" class="tab-content">
+        <div class="tab-pane active" id="login">
+          <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
+               alt="">
+          <form class="form-signin">
+            <input type="text" class="form-control" ng-model="user" placeholder="Username" required autofocus>
+            <br/>
+            <input type="button" class="btn btn-lg btn-primary btn-block" value="Sign In to Chat" ng-click="signin()"/>
+          </form>
         </div>
       </div>
     </div>
